        and added an Engine#clear() method to discard it altogether.
      - Added an getResponseLogMessage(request, response, duration) method to 
        LogService class so it can be easily overridden/customized. Also
        added a protected getDefaultResponseLogMessage(..) method returning the
        default IIS log message.
    - Enhancements
      - Added support for non-blocking HTTPS to the internal NIO connectors, 
        client-side and server-side. Sponsored by NetDev.
      - Keep alive empty lines between messages in a persistent connections are
        now eat silently. Reported by John Logsdon.
      - Refactored the internal NIO connector to better support the differences
        between HTTP and SIP protocols regarding transaction management.
    - Bugs fixed
      - Fixed bug preventing persistent connections reuse when an entity is
        present. Reported by John Logsdon.
      - Fixed potential issue with double consumption of SIP ACK messages. 
        Reported by John Logsdon.
      - Fixed issue with asynchronous responses and provisional responses
        preventing the resue of persistent connections. 
        Reported by Phil Dunks. 
     - Misc
      - If the Engine#logFormatter is set to null, the log formatter of the
        console is not changed anymore.

- 2.1 Milestone 2 (12/24/2010)
    - API changes
      - The org.restlet.service.TaskService is now a ScheduledExecutorService
        capable of running delayed commands at fixed intervals for example.
        Suggested by Kristoffer Gronowski.
      - JsonRepresentation(Map<Object,Object>) signature changed to the more
        precise JsonRepresentation(Map<String, Object) one.
        Suggested by Tim Peierls.
      - Facilitating the creation of ClientResource subclasses by changing
        the visibility of handle(...) methods from private to protected.
        Leveraged by the SipClientResource in the SIP extension.
        Reported by Phil Dunks.
    - Enhancements